# mikepluspy

./: .gitignore  .nojekyll  2024_0.7z  2024_1.7z  2025_0.7z  404.html  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  index.html  install.bat  install.ps1  license.html  mkdocs.yml  objects.inv  pyproject.toml  robots.txt  search.json  sitemap.xml  test_file.txt
.github/workflows/: docs.yml  full_test.yml  full_test_2024_0.yml  full_test_2024_1.yml  full_test_self_hosted.yml  python-app.yml  python_publish.yml  python_publish_test.yml
JupyterNotebook/: DataTableAccessor.ipynb
api/: Database.html  TableCollection.html  create.html  index.html  m21_pfsKeyword.html  m21_pfsParam.html  m21_pfsSection.html  m2d_ADDecay.html  m2d_ADDispersion.html  m2d_ADDispersionArea.html  m2d_ADDispersionD.html  m2d_ADEvaporation.html  m2d_ADEvaporationArea.html  m2d_ADEvaporationD.html  m2d_ADInfiltration.html  m2d_ADInfiltrationArea.html  m2d_ADInfiltrationD.html  m2d_ADInitalCondition.html  m2d_ADInitalConditionArea.html  m2d_ADInitalConditionD.html  m2d_ADPrecipitation.html  m2d_ADPrecipitationArea.html  m2d_ADPrecipitationD.html  m2d_BndDistributedSource.html  m2d_BndQHRelation.html  m2d_Boundary.html  m2d_Coupling.html  m2d_CouplingConn.html  m2d_CouplingEngineConn.html  m2d_CouplingEngineFace.html  m2d_EddyViscosityArea.html  m2d_GlobalSetting.html  m2d_GridDefinition.html  m2d_GridInactiveArea.html  m2d_InfBuilding.html  m2d_InfRoad.html  m2d_Infiltration.html  m2d_InfiltrationLandCover.html  m2d_InitialConditionArea.html  m2d_MeshArc.html  (+288 more)
cli/MikePlusCli/: AmeliaContext.cs  CliResult.cs  DatabaseContext.cs  MikePlusCli.csproj  Program.cs
cli/MikePlusCli/Commands/: AlternativeCommand.cs  DatabaseCommand.cs  EditCommand.cs  ImportCommand.cs  ModelCommand.cs  RunCommand.cs  ScenarioCommand.cs  SharedOptions.cs  SimulateCommand.cs  TableCommand.cs  ToolCommand.cs
cli/MikePlusJsonCli/: AmeliaContext.cs  CommandDispatcher.cs  MikePlusJsonCli.csproj  Program.cs  README.md  Session.cs
cli/MikePlusJsonCli/Handlers/: EditHandlers.cs  HandlerHelper.cs  ICommandHandler.cs  ImportHandlers.cs  ModelHandlers.cs  ScenarioHandlers.cs  SimulateHandlers.cs  ToolHandlers.cs
datatableaccess/: index.html
docs/: .gitignore  _quarto.yml  _table_generated_sections.yml  datatableaccess.md  engines.md  generate_table_docs.py  index.md  index.qmd  license.qmd  tools.md
docs/user-guide/: database.qmd  getting-started.qmd  index.qmd  queries.qmd  scenarios.qmd  simulations.qmd  tables.qmd  tools.qmd
engines/: index.html
examples/: index.html
images/logo/: mikeplus-py.eps
mikeplus/: __init__.py  conflicts.py  database.py  datatableaccess.py  datatbleaccess.py  dotnet.py  model_database.py  queries.py  shortcuts.py  simulation_runner.py  utils.py
mikeplus-python/: datatbleaccess.py
mikeplus-python/engines/: __init__.py
mikeplus-python/tools/: import_tool.py
mikeplus/engines/: __init__.py  engine1d.py  epanet.py  floodEngine.py  flood_engine.py  mike_engine.py  swmm.py
mikeplus/fieldTableNames/: __init__.py  fieldNames.py  tableNames.py
mikeplus/scenarios/: __init__.py  alternative.py  alternative_group.py  alternative_group_collection.py  scenario.py  scenario_collection.py
mikeplus/tableWrapper/: FieldNameBase.py  MsmNode.py  __init__.py
mikeplus/tables/: __init__.py  auto_generated_table_template.txt  auto_table_class_generator.py  base_geometry_table.py  base_node_table.py  base_table.py  base_table_collection.py  base_table_columns.py  table_collection_template.txt  utilities.py
mikeplus/tables/auto_generated/: __init__.py  m21_pfsKeyword.py  m21_pfsParam.py  m21_pfsSection.py  m2d_ADDecay.py  m2d_ADDispersion.py  m2d_ADDispersionArea.py  m2d_ADDispersionD.py  m2d_ADEvaporation.py  m2d_ADEvaporationArea.py  m2d_ADEvaporationD.py  m2d_ADInfiltration.py  m2d_ADInfiltrationArea.py  m2d_ADInfiltrationD.py  m2d_ADInitalCondition.py  m2d_ADInitalConditionArea.py  m2d_ADInitalConditionD.py  m2d_ADPrecipitation.py  m2d_ADPrecipitationArea.py  m2d_ADPrecipitationD.py  m2d_BndDistributedSource.py  m2d_BndQHRelation.py  m2d_Boundary.py  m2d_Coupling.py  m2d_CouplingConn.py  m2d_CouplingEngineConn.py  m2d_CouplingEngineFace.py  m2d_EddyViscosityArea.py  m2d_GlobalSetting.py  m2d_GridDefinition.py  m2d_GridInactiveArea.py  m2d_GridInactiveAreaLayer.py  (+299 more)
mikeplus/tools/: __init__.py  catch_slope_length_process_tool.py  connection_repair_tool.py  couple_river_junction_tool.py  import_tool.py  interpolation_tool.py  topology_repair_tool.py
mikeplus/utilities/: __init__.py  spatial_analysis_util.py
notebooks/: DataTableAccessor.ipynb  EngineAccessor.ipynb  ToolsAccessor.ipynb  UpgradeDatabase.ipynb  add_many_section_discharge_result_specifications.ipynb  couple river junction node to river.ipynb  create_empty_mikeplus_sqlite_database.ipynb  database_management_basics.ipynb  node_connectivity_information.ipynb  run_import_tool.ipynb  run_multiple_rainfall_events.ipynb  running_simulations.ipynb  scenario_manager.ipynb
script/: __init__.py  datatbleaccess.py
script/engines/: __init__.py  engine1d.py  epanet.py  swmm.py
script/tools/: __init__.py  catch_slope_length_process_tool.py  connection_repair_tool.py  import_tool.py  interpolation_tool.py  topology_repair_tool.py
scripts/: generate_tables.py
scripts/table_templates/: init.j2  table_class.j2  table_collection.j2
site_libs/bootstrap/: bootstrap-bce83624dd429190d13db9bf62533269.min.css
test_utils/: __init__.py  database_creators.py  database_upgrade.py
tests/: conftest.py  test_datatable.py  test_engine.py  test_mike_engine.py  test_scenarios.py  test_simulation_runner.py  test_tableWrapper.py  test_tools.py
tests/database/: __init__.py  test_database.py  test_queries.py  test_table_collection.py  test_table_generation.py  test_tables.py  test_utilities.py
tests/model_database/: test_model_database.py  test_queries.py  test_table_collection.py  test_tables.py  test_utilities.py
tools/: index.html
user-guide/: database.html  getting-started.html  index.html  queries.html  simulations.html  tables.html  tools.html
(+56 files in other folders)
