[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests"]

[project]
name = "mikeplus"
version = "2025.0.2"
dependencies = [
    "numpy",
    'pythonnet>=3.0',
    "pandas",
]
authors = [
  { name="Ryan Walter Murray", email="rywm@dhigroup.com" },
  { name="Wen Wu", email="WUW@dhigroup.com" },
]
description = "A python script package to manipulate MIKE+ database, run simulation by using MIKE+ data, run tools based on MIKE+ data"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "shapely", "jinja2>=3.0.0"]
test = ["pytest", "pytest-timeout", "shapely"]
doc =  ["sphinx", "myst-parser","sphinx-book-theme","mkdocs==1.5.3","mkdocs-material==9.4.14","mkdocstrings==0.24.0","mkdocstrings-python==1.7.5"]

[project.urls]
"Homepage" = "https://github.com/DHI/mikepluspy"
"Bug Tracker" = "https://github.com/DHI/mikepluspy/issues"

# mypy global options:

[tool.mypy]
python_version = "3.10"
warn_return_any = false
allow_redefinition = true
warn_unreachable = true

[tool.ruff]
# ignore long lines
lint.exclude = ["notebooks/**/*.ipynb", "mikeplus/tables/auto_generated/*.py"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--strict-markers --verbose --timeout=90 --timeout_method=thread"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "license_required: marks tests that require a license (deselect with '-m \"not license_required\"')",
    "timeout: marks a test with a timeout value in seconds",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["always"]
