[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = ["notebooks", "tests"]

[project]
name = "mikeplus"
version = "2026.0.0"
dependencies = [
    "numpy",
    "pythonnet>=3.0",
    "pandas",
]
authors = [
  { name="Ryan Walter Murray", email="rywm@dhigroup.com" },
  { name="Wen Wu", email="WUW@dhigroup.com" },
]
description = "A python script package to manipulate MIKE+ database, run simulation by using MIKE+ data, run tools based on MIKE+ data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "shapely",
    "jinja2>=3.0.0",
    "mypy==1.15.0",
    "pandas-stubs>=2.2.2.240807",
    "ipykernel>=6.29.5",
]
test = [
    "pytest",
    "pytest-timeout",
    "shapely",
    "jinja2>=3.0.0",
    "mypy==1.15.0",
    "pandas-stubs>=2.2.2.240807",
]
docs = [
    # "quarto-cli==1.7.30", # TODO: Add quarto-cli when it is available on Windows via PyPI
    "quartodoc==0.10.0",
]

[project.urls]
"Homepage" = "https://github.com/DHI/mikepluspy"
"Bug Tracker" = "https://github.com/DHI/mikepluspy/issues"

[tool.mypy]
python_version = "3.13"
warn_return_any = false
allow_redefinition = true
warn_unreachable = true
exclude = ["mikeplus/tables/auto_generated/"]

[[tool.mypy.overrides]]
module = [
    "DHI.*",
    "System.*",
    "clr",
    "pythonnet",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mikeplus.tables.auto_generated.*"]
ignore_errors = true

[tool.ruff]
include = ["pyproject.toml", "mikeplus/**/*.py"]
lint.exclude = ["notebooks/**/*.ipynb", "mikeplus/tables/auto_generated/*.py"]
format.exclude = ["notebooks/**/*.ipynb", "mikeplus/tables/auto_generated/*.py"]
lint.extend-select = ["D", "PD", "NPY", "FA"]
lint.pydocstyle.convention = "numpy"
lint.ignore = ["E501"]

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--durations=50",
    "--durations-min=0.5",
    "--disable-warnings",
    "-s",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "license_required: marks tests that require a license (deselect with '-m \"not license_required\"')",
    "timeout: marks a test with a timeout value in seconds",
    "skip_ci: marks a test to be skipped on CI",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = ["always"]
